@@ -140,7 +140,7 @@ void PsxThread::run() {
 
 // TODO spu
 #define STATE_SERIALIZE_BUILDER(sl) \
-	STATE_SERIALIZE_BEGIN_##sl(PsxMachine, 1) \
+STATE_SERIALIZE_BEGIN_##sl(PsxMachine, 1) \
 	STATE_SERIALIZE_VAR_##sl(Config.HLE) \
 	if (STATE_SERIALIZE_TEST_TYPE_##sl) { \
 		new_dyna_save(); \
@@ -167,7 +167,7 @@ void PsxThread::run() {
 	if (!STATE_SERIALIZE_TEST_TYPE_##sl) { \
 		new_dyna_restore(); \
 	} \
-	STATE_SERIALIZE_END_##sl(PsxMachine)
+STATE_SERIALIZE_END_##sl(PsxMachine)
 
 STATE_SERIALIZE_BUILDER(SAVE)
 STATE_SERIALIZE_BUILDER(LOAD)
