@@ -1,5 +1,7 @@
 poll: Amiga N64 NDS Bluetooth-Gamepad NETplay ROMs-from-zipped-files
 
+ b kula world wont save
+ s start button misplaced
  s psx selectable bios
  s psx filter files in rom gallery
  s dwie rundy w tekenie - w replayu start i stop ??
@@ -23,6 +25,7 @@ poll: Amiga N64 NDS Bluetooth-Gamepad NETplay ROMs-from-zipped-files
  s bluetooth gamepad
  s zipped savestates
  b saves in gba tasmanian dont work
+ s remove last state option
  - Amiga
  - N64
  - ScummVM
